# surreal-actix

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .surrealdb  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
.cursor/rules/: cursor-rules.mdc  development-cycle.mdc  development-guide.mdc  dto-validation.mdc  index.mdc  openapi-documentation.mdc  project-structure.mdc  surrealdb.mdc  task-list.mdc  testing.mdc
.cursor/rules/features/: accounts.mdc
.github/workflows/: ci.yml
config/: default.toml  docker.toml
migration/migrations/definitions/: _initial.json
migration/schemas/: account.surql
src/: app.rs  config.rs  container.rs  main.rs  opentelemetry.rs
src/api/: error.rs  mod.rs
src/api/controllers/: account.rs
src/api/dto/: account.rs  mod.rs  validation.rs
src/api/middlewares/: auth.rs  mod.rs  validate.rs
src/domain/: error.rs
src/domain/models/: account.rs  jsonwebtoken.rs  mod.rs
src/domain/repositories/: account.rs  mod.rs  repository.rs
src/domain/services/: account.rs  jsonwebtoken.rs
src/infrastructure/databases/: surrealdb.rs
src/infrastructure/models/: account.rs
src/infrastructure/repositories/: account.rs
src/services/: account.rs  jsonwebtoken.rs
src/tests/: account.rs  mod.rs
src/tests/utils/: crypto.rs  mod.rs  seed.rs
